<resources>
    <string name="app_name">Yolo</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="ic_home">Home</string>
    <string name="ic_popular">Popular</string>
    <string name="ic_random">Random</string>
    <string name="ic_like">Like</string>
    <string name="ic_history">History</string>
    <string name="ic_about">About</string>
    <string name="photo_source">Photo source</string>
    <string name="unsplash_ic">unsplash_ic</string>
    <string name="search">Search</string>
    <string name="image">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_main_retry">Retry</string>
    <string name="fragment_main_result_could_not_be_loaded">Result could not be loaded</string>
    <string name="fragment_main_no_result_found_for_this_query">No result found for this query</string>
    <string name="ic_share">share</string>
    <string name="ic_info">info</string>
    <string name="fragment_photo_full_image">full_image</string>
    <string name="photo_fragment_download">icon download</string>
    <string name="photo_fragment_folder">icon folder</string>
    <string name="photo_fragment_change">icon change</string>
    <string name="photo_fragment_like_empty">icon like_empty</string>
    <string name="photo_fragment_like_filled">icon like_filled</string>
    <string name="ic_back">icon back</string>
    <string name="ic_cancel">icon cancel</string>
    <string name="ic_check">icon check</string>
    <string name="website">Website: </string>
    <string name="author">Author: </string>
    <string name="saved">Saved </string>
    <string name="lock_screen">Set as Lock screen</string>
    <string name="home_screen">Set as Home screen</string>
    <string name="both_screen">Set both</string>
    <string name="failed">Failed to load wallpapers</string>
    <string name="noInternet">No internet connection</string>
</resources>