<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    android:padding="24dp">

    <TextView
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:drawablePadding="12dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:inputType=""
        android:maxLines="1"
        android:padding="8dp"
        android:text="@string/home_screen"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/lock_screen"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_lock_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home" />

    <TextView
        android:id="@+id/bothScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/both_screen"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_both_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lock" />

</androidx.constraintlayout.widget.ConstraintLayout>