<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/grey">

    <ImageView
        android:id="@+id/fullPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fragment_photo_full_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:baselineAligned="false"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp">

            <ImageView
                android:id="@+id/download"
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/photo_fragment_download"
                android:focusable="true"
                android:src="@drawable/ic_download" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp">

            <ImageView
                android:id="@+id/wallpaper"
                android:layout_width="24sp"
                android:layout_height="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/photo_fragment_download"
                android:focusable="true"
                android:src="@drawable/ic_folder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp">

            <ImageView
                android:id="@+id/change"
                android:layout_width="24sp"
                android:layout_height="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/photo_fragment_download"
                android:focusable="true"
                android:src="@drawable/ic_change" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp">

            <ImageView
                android:id="@+id/like"
                android:layout_width="24sp"
                android:layout_height="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/photo_fragment_download"
                android:focusable="true"
                tools:src="@drawable/ic_download" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/retryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_retry"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>