<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!-- Main Fragment -->
    <LinearLayout
        android:id="@+id/main_activity_content_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".presentation.view.fragment.main.MainFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/activity_main_appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/activity_main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/black"

                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_main_content_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabIndicatorColor="@color/theme"
                app:tabIndicatorHeight="0dp"
                app:tabMode="scrollable"
                app:tabRippleColor="@null"
                app:tabSelectedTextColor="@color/theme"
                app:tabTextAppearance="@style/TabText"
                app:tabTextColor="@color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabLayout" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <!-- Main Activity End -->
    <!-- Custom Navigation Drawer Start -->
    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/theme_navigation_drawer"
        android:orientation="vertical"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/navigation_header_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:scaleType="fitCenter"
                android:src="@drawable/yolo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/navigation_rv"
            android:layout_width="260dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_nav_drawer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24sp"
            android:text="@string/photo_source"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/unsplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="16dp"
            android:contentDescription="@string/unsplash_ic"
            android:src="@drawable/unsplash" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>